syntax = "proto3";
package microtick.v1beta1.msg;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/microtick/mtzone/x/microtick/msg";

message QueryAccountRequest {
  
  bytes account = 1 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
    (gogoproto.jsontag) = "account"
  ];
  
  uint32 offset = 2 [
    (gogoproto.jsontag) = "offset"
  ];
  
  uint32 limit = 3 [
    (gogoproto.jsontag) = "limit"
  ];
  
}

message QueryAccountResponse {
  
  bytes account = 1 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
    (gogoproto.jsontag) = "account"
  ];
  
  repeated cosmos.base.v1beta1.DecCoin balances = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "balances"
  ];
  
  uint32 placed_quotes = 3 [
    (gogoproto.jsontag) = "placed_quotes"
  ];
  
  uint32 placed_trades = 4 [
    (gogoproto.jsontag) = "placed_trades"
  ];
  
  uint32 offset = 5 [
    (gogoproto.jsontag) = "offset"
  ];
  
  uint32 limit = 6 [
    (gogoproto.jsontag) = "limit"
  ];
  
  uint32 total_active_quotes = 7 [
    (gogoproto.jsontag) = "total_active_quotes"
  ];
  
  repeated uint32 active_quotes = 8 [
    (gogoproto.jsontag) = "active_quotes"
  ];
  
  uint32 total_active_trades = 9 [
    (gogoproto.jsontag) = "total_active_trades"
  ];
  
  repeated uint32 active_trades = 10 [
    (gogoproto.jsontag) = "active_trades"
  ];
  
  cosmos.base.v1beta1.DecCoin quote_backing = 11 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "quote_backing"
  ];
  
  cosmos.base.v1beta1.DecCoin trade_backing = 12 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "trade_backing"
  ];
  
  cosmos.base.v1beta1.DecCoin settle_backing = 13 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "settle_backing"
  ];
  
}
